# auto-test-tool

./: .gitignore  index.html  package-lock.json  package.json
docs/superpowers/plans/: 2026-07-06-contrabass-e2e-test-tool.md  2026-07-07-webview-capture.md
docs/superpowers/specs/: 2026-07-06-contrabass-e2e-test-tool-design.md  2026-07-07-webview-capture-design.md  2026-07-08-vscode-theme-and-inline-run-design.md
public/: tabbar.html
src/: App.css  App.tsx  api.ts  capture.test.ts  capture.ts  main.tsx  mqLog.ts  presets.test.ts  presets.ts  replayDelegate.ts  types.ts  uiStep.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: capture.json  default.json  tabbar.json
src-tauri/permissions/autogenerated/: activate_tab.toml  capture_push.toml  capture_session_active.toml  clear_ui_runs.toml  close_tab.toml  continue_ui_replay.toml  create_ui_run.toml  delete_environment.toml  delete_scenario.toml  delete_ui_flow.toml  delete_ui_run.toml  export_scenario.toml  export_ui_flows.toml  finish_ui_run.toml  import_scenario.toml  import_ui_flows.toml  list_all_ui_flows.toml  list_environments.toml  list_scenarios.toml  list_step_results.toml  list_tabs.toml  list_ui_flow_sites.toml  list_ui_flows.toml  list_ui_run_steps.toml  list_ui_runs.toml  load_ui_actions.toml  open_tab.toml  read_upload_file.toml  read_upload_file_chunk.toml  rename_ui_flow.toml  rename_ui_group.toml  resume_ui_replay.toml  run_scenario.toml  run_wait_event.toml  save_environment.toml  save_scenario.toml  save_ui_actions.toml  save_ui_flow.toml  save_ui_run_step.toml  set_ui_recording.toml  (+10 more)
src-tauri/src/: assertion.rs  capture_server.rs  capture_session.rs  cert_bypass.rs  commands.rs  engine.rs  events.rs  http.rs  keystone.rs  lib.rs  main.rs  matcher.rs  models.rs  mq.rs  store.rs  tabs.rs  template.rs
src/components/: ApiCallsModal.tsx  FlowTree.tsx  MqLogPanel.tsx  ProgStepAdder.tsx
src/hooks/: useColumnWidth.ts  useRun.ts
src/views/: CaptureView.tsx  EnvironmentsView.tsx  HistoryView.tsx  RunProgress.tsx  RunView.tsx  ScenarioBuilder.tsx  StepForm.tsx  UiSuiteView.tsx
