[package]
name = "autotest-tool"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "autotest_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json"] }
regex = "1.12.4"
serde_json_path = "0.7.2"
lapin = "4.10.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
keyring = "4.1.3"
tokio-util = "0.7.18"
futures-util = "0.3.32"
chrono = "0.4.45"
tauri-plugin-dialog = "2.7.1"
axum = "0.8.9"

[dev-dependencies]
wiremock = "0.6.5"

